# Antivirus-Prototype-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  requirements.txt  robots.txt  setup.cfg  setup.py
frontend/: README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  custom.d.ts  index.css  react-app-env.d.ts
frontend/src/components/dashboard/: RecentScans.tsx  ScanStats.tsx  SystemStatus.tsx
frontend/src/components/layout/: MainLayout.tsx  Navbar.tsx  Sidebar.tsx  index.ts
frontend/src/components/scan/: FileUploadCard.tsx
frontend/src/pages/: Dashboard.tsx  NotFound.tsx  RecentScans.tsx  ScanResult.tsx
frontend/src/services/: api.ts
frontend/src/store/: useStore.ts
scripts/: download_sample_data.py  download_sample_datasets.py  monitor_ml_model.py  prepare_training_data.py  setup_ml_dirs.py  train_ml_model.py
src/antivirus/: __main__.py
src/antivirus/cli/: main.py  ml_commands.py
src/antivirus/core/: behavior_analyzer.py  config.py  engine.py  ml_config.py  realtime_monitor.py  threat_intel.py
src/antivirus/ml/: advanced_threat_detector.py  monitoring.py  threat_detector.py
src/antivirus/scanners/: ml_scanner.py  signature_scanner.py  yara_manager.py
src/antivirus/utils/: file_utils.py  helpers.py  logger.py
tests/unit/: test_advanced_threat_detector.py
