[metadata]
description-file = README.md
license_files = LICENSE

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=antivirus --cov-report=term-missing

[coverage:run]
source = src
omit = 
    */tests/*
    */__init__.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,.tox,.mypy_cache,.pytest_cache,venv
